--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,7 @@
     "noImplicitAny": true,
     "strict": true,
     "skipLibCheck": true,
-    "typeRoots": ["./src/app.d.ts",
-    "./src/types/types.d.ts",
-    "./src/types",
-  
-    "./node_modules/@types"]
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": [
     "./*.js",
